# cmake-example

./: .gitignore
QtBundle/: CMakeLists.txt  main.cpp
QtTest/: CMakeLists.txt
QtTest/build-xcode/: CMakeCache.txt  QtTest_automoc.cpp  cmake_install.cmake  install_manifest.txt  moc_TestForm.cpp  ui_TestForm.h
QtTest/build-xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  QtTest_automoc_cmakeRulesBuildPhase.makeDebug  QtTest_automoc_cmakeRulesBuildPhase.makeMinSizeRel  QtTest_automoc_cmakeRulesBuildPhase.makeRelWithDebInfo  QtTest_automoc_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
QtTest/build-xcode/Debug/QtTest.app/Contents/: Info.plist
QtTest/build-xcode/Debug/QtTest.app/Contents/MacOS/: QtTest
QtTest/build-xcode/QtTest.build/Debug/ALL_BUILD.build/: Script-DA157A1FACDB49729BD4EE48.sh  dgph
QtTest/build-xcode/QtTest.build/Debug/QtTest.build/: dgph
QtTest/build-xcode/QtTest.build/Debug/QtTest.build/Objects-normal/x86_64/: QtTest.LinkFileList  QtTest_automoc.d  main.d
QtTest/build-xcode/QtTest.build/Debug/QtTest_automoc.build/: Script-F2DFAACE308D4088B019453B.sh  dgph
QtTest/build-xcode/QtTest.build/Debug/ZERO_CHECK.build/: dgph
QtTest/build-xcode/QtTest.build/Release/ALL_BUILD.build/: dgph
QtTest/build-xcode/QtTest.build/Release/QtTest.build/: dgph
QtTest/build-xcode/QtTest.build/Release/QtTest.build/Objects-normal/x86_64/: QtTest.LinkFileList  TestForm.d
QtTest/build-xcode/QtTest.build/Release/QtTest_automoc.build/: dgph
QtTest/build-xcode/QtTest.build/Release/ZERO_CHECK.build/: Script-1D5AAC9081F34C4B9635520B.sh  dgph
QtTest/build-xcode/QtTest.build/Release/install.build/: Script-AE76E27A3F8A4F88BB6D141C.sh  dgph
QtTest/build-xcode/QtTest.xcodeproj/: project.pbxproj
QtTest/build-xcode/Release/QtTest.app/Contents/MacOS/: QtTest
